--- a/index.html
+++ b/index.html
@@ -6,8 +6,32 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="js/resources.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous"></script>
+    <script src="./js/resources.js"></script>
+    <script src="./js/app.js"></script>
+
 </body>
+  <script src="./js/engine.js"></script>
+  <!-- Start Screen -->
+    <div id="startScreen" class="start-screen overlay">
+    	<div class="content">
+
+				<button id="playGame" class="button">Play Now!</button>
+			</div>
+			<div class="grass"></div>
+    </div>
+  <!-- Game Over -->
+    <div id="gameOver" class="game-over overlay hidden">
+      <div class="content">
+        <h2 class="heading">Game Over</h2>
+        <div class="final-score">
+          Final Score: <span id="score"></span>
+        </div>
+        <a id="playAgain" class="button">Play Again</button>
+
+      </div>
+    </div>
 </html>
