Updated Index.html to create game over modal

--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
 			<div class="grass"></div>
     </div>
   <!-- Game Over -->
-    <div id="gameOver" class="game-over overlay hidden">
-      <div class="content">
-        <h2 class="heading">Game Over</h2>
-        <div class="final-score">
+  <!-- The Modal -->
+		<div id="gameOver" class="modal hidden">
+		<!-- Modal content -->
+			<div class="modal-content">
+        <div  class="game-over overlay hidden">
+          <div class="content">
+            <h2 class="heading">Game Over</h2>
+            <div class="final-score">
           Final Score: <span id="score"></span>
-        </div>
-        <a id="playAgain" class="button">Play Again</button>
+            </div>
+            <button id="playAgain" class="button">Play Again</button>
 
+          </div>
+        </div>
       </div>
     </div>
 </html>
